updating newApp.js

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -30,9 +30,9 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: ll456</li>
+            <li class="list-group-item">ID: 123456</li>
             <li class="list-group-item">Email: <a href="mailto:larry@larry.com">larry@larry.com</a></li>
-            <li class="list-group-item">Office number: 12345</li>
+            <li class="list-group-item">Office number: je34</li>
         </ul>
     </div>
 </div>
