--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -30,9 +30,22 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 123456</li>
+            <li class="list-group-item">ID: 12345</li>
             <li class="list-group-item">Email: <a href="mailto:larry@larry.com">larry@larry.com</a></li>
-            <li class="list-group-item">Office number: je34</li>
+            <li class="list-group-item">Office number: rm123</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">larrylarry</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: intern1234</li>
+            <li class="list-group-item">Email: <a href="mailto:intern@intern.com">intern@intern.com</a></li>
+            <li class="list-group-item">School: github.com</li>
         </ul>
     </div>
 </div>
