updating ReadME and functions

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -25,27 +25,27 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">larrylarry</h2>
+        <h2 class="card-title">asdfasdf</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 12345</li>
-            <li class="list-group-item">Email: <a href="mailto:larry@larry.com">larry@larry.com</a></li>
-            <li class="list-group-item">Office number: rm123</li>
+            <li class="list-group-item">ID: 1234</li>
+            <li class="list-group-item">Email: <a href="mailto:email.com">email.com</a></li>
+            <li class="list-group-item">Office number: 32334</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">larrylarry</h2>
+        <h2 class="card-title">InternName</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: intern1234</li>
-            <li class="list-group-item">Email: <a href="mailto:intern@intern.com">intern@intern.com</a></li>
-            <li class="list-group-item">School: github.com</li>
+            <li class="list-group-item">ID: 12345</li>
+            <li class="list-group-item">Email: <a href="mailto:intern@email.com">intern@email.com</a></li>
+            <li class="list-group-item">School: Gateway</li>
         </ul>
     </div>
 </div>
