adding images and video to ReadME

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -25,14 +25,14 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">larry</h2>
+        <h2 class="card-title">Larry</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 1234</li>
             <li class="list-group-item">Email: <a href="mailto:larry@email.com">larry@email.com</a></li>
-            <li class="list-group-item">Office number: Room7</li>
+            <li class="list-group-item">Office number: Room56</li>
         </ul>
     </div>
 </div>
@@ -43,21 +43,21 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 3456</li>
+            <li class="list-group-item">ID: 4567</li>
             <li class="list-group-item">Email: <a href="mailto:george@email.com">george@email.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/georgetheGeek" target="_blank" rel="noopener noreferrer">georgetheGeek</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/georgeEngineer" target="_blank" rel="noopener noreferrer">georgeEngineer</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Bobby</h2>
+        <h2 class="card-title">Peter</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 5678</li>
-            <li class="list-group-item">Email: <a href="mailto:bobby@email.com">bobby@email.com</a></li>
+            <li class="list-group-item">ID: 8989</li>
+            <li class="list-group-item">Email: <a href="mailto:peter@email.com">peter@email.com</a></li>
             <li class="list-group-item">School: Gateway CC</li>
         </ul>
     </div>
