Updating newApp.js

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -32,33 +32,33 @@
         <ul class="list-group">
             <li class="list-group-item">ID: 1234</li>
             <li class="list-group-item">Email: <a href="mailto:larry@email.com">larry@email.com</a></li>
-            <li class="list-group-item">Office number: Room56</li>
+            <li class="list-group-item">Office number: 456</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">George</h2>
+        <h2 class="card-title">James</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 4567</li>
-            <li class="list-group-item">Email: <a href="mailto:george@email.com">george@email.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/georgeEngineer" target="_blank" rel="noopener noreferrer">georgeEngineer</a></li>
+            <li class="list-group-item">ID: 5678</li>
+            <li class="list-group-item">Email: <a href="mailto:geek@email.com">geek@email.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/geekboy" target="_blank" rel="noopener noreferrer">geekboy</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Peter</h2>
+        <h2 class="card-title">Toby</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 8989</li>
-            <li class="list-group-item">Email: <a href="mailto:peter@email.com">peter@email.com</a></li>
-            <li class="list-group-item">School: Gateway CC</li>
+            <li class="list-group-item">ID: 575757</li>
+            <li class="list-group-item">Email: <a href="mailto:toby@email.com">toby@email.com</a></li>
+            <li class="list-group-item">School: Southern</li>
         </ul>
     </div>
 </div>
